# catopy

./: .catopy.rc.example  .clipcat.rc.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  PACKAGING.md  README.md
.github/workflows/: ci.yml  deb.yml  release.yml  rpm.yml
completions/: catopy.bash  catopy.fish  catopy.zsh  clipcat.bash  clipcat.fish  clipcat.zsh
man/: catopy.1  catopy.1.es  catopy.1.fr  clipcat.1  clipcat.1.es  clipcat.1.fr
packaging/debian/: changelog  control  copyright  rules
packaging/obs/: README.txt
packaging/rpm/: catopy.spec  clipcat.spec
scripts/: package-tarballs.sh
src/: config.rs  file_ops.rs  main.rs  output.rs
tests/: cli.rs
