[package]
name = "clipcat"
version = "0.1.0"
edition = "2024"
description = "Copy file content to clipboard safely with size guards"
license = "GPL-3.0"
authors = ["Felix <felix@example.com>"]
repository = "https://github.com/felix/clipcat"
homepage = "https://github.com/felix/clipcat"
readme = "README.md"
keywords = ["clipboard", "cli", "cat", "utility"]
categories = ["command-line-utilities"]
include = [
	"src/**",
	"README.md",
	"CHANGELOG.md",
	"LICENSE",
	"man/clipcat.1",
	"man/clipcat.1.es",
	"man/clipcat.1.fr",
	"completions/**",
	"packaging/**",
	"Cross.toml",
	"Makefile",
]

[[bin]]
name = "clipcat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.deb]
maintainer = "Felix <felix@example.com>"
copyright = "2026, clipcat maintainers"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
	["target/release/clipcat", "usr/bin/clipcat", "755"],
	["README.md", "usr/share/doc/clipcat/README.md", "644"],
	["CHANGELOG.md", "usr/share/doc/clipcat/CHANGELOG.md", "644"],
	["man/clipcat.1", "usr/share/man/man1/clipcat.1", "644"],
	["man/clipcat.1.es", "usr/share/man/es/man1/clipcat.1", "644"],
	["man/clipcat.1.fr", "usr/share/man/fr/man1/clipcat.1", "644"],
	["completions/clipcat.bash", "usr/share/bash-completion/completions/clipcat", "644"],
	["completions/clipcat.zsh", "usr/share/zsh/site-functions/_clipcat", "644"],
	["completions/clipcat.fish", "usr/share/fish/vendor_completions.d/clipcat.fish", "644"],
]

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/clipcat", dest = "/usr/bin/clipcat", mode = "755" },
	{ source = "man/clipcat.1", dest = "/usr/share/man/man1/clipcat.1", mode = "644", doc = true },
	{ source = "man/clipcat.1.es", dest = "/usr/share/man/es/man1/clipcat.1", mode = "644", doc = true },
	{ source = "man/clipcat.1.fr", dest = "/usr/share/man/fr/man1/clipcat.1", mode = "644", doc = true },
	{ source = "completions/clipcat.bash", dest = "/usr/share/bash-completion/completions/clipcat", mode = "644" },
	{ source = "completions/clipcat.zsh", dest = "/usr/share/zsh/site-functions/_clipcat", mode = "644" },
	{ source = "completions/clipcat.fish", dest = "/usr/share/fish/vendor_completions.d/clipcat.fish", mode = "644" },
	{ source = "README.md", dest = "/usr/share/doc/clipcat/README.md", mode = "644", doc = true },
	{ source = "CHANGELOG.md", dest = "/usr/share/doc/clipcat/CHANGELOG.md", mode = "644", doc = true },
	{ source = "LICENSE", dest = "/usr/share/licenses/clipcat/LICENSE", mode = "644", doc = true },
]
