[package]
name = "catopy"
version = "0.2.0"
edition = "2024"
description = "Copy file content to clipboard safely with size guards"
license = "GPL-3.0"
authors = ["Felix <felix@example.com>"]
repository = "https://github.com/febrezo/catopy"
homepage = "https://github.com/febrezo/catopy"
readme = "README.md"
keywords = ["clipboard", "cli", "cat", "utility"]
categories = ["command-line-utilities"]
include = [
	"src/**",
	"tests/**",
	"README.md",
	"CHANGELOG.md",
	"LICENSE",
	"catopy.spec",
	"man/catopy.1",
	"man/catopy.1.es",
	"man/catopy.1.fr",
	"completions/**",
	"packaging/**",
	"Cross.toml",
	"Makefile",
]

[[bin]]
name = "catopy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.deb]
maintainer = "Felix <felix@example.com>"
copyright = "2026, catopy maintainers"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
	["target/release/catopy", "usr/bin/catopy", "755"],
	["README.md", "usr/share/doc/catopy/README.md", "644"],
	["CHANGELOG.md", "usr/share/doc/catopy/CHANGELOG.md", "644"],
	["man/catopy.1", "usr/share/man/man1/catopy.1", "644"],
	["man/catopy.1.es", "usr/share/man/es/man1/catopy.1", "644"],
	["man/catopy.1.fr", "usr/share/man/fr/man1/catopy.1", "644"],
	["completions/catopy.bash", "usr/share/bash-completion/completions/catopy", "644"],
	["completions/catopy.zsh", "usr/share/zsh/site-functions/_catopy", "644"],
	["completions/catopy.fish", "usr/share/fish/vendor_completions.d/catopy.fish", "644"],
]

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/catopy", dest = "/usr/bin/catopy", mode = "755" },
	{ source = "man/catopy.1", dest = "/usr/share/man/man1/catopy.1", mode = "644", doc = true },
	{ source = "man/catopy.1.es", dest = "/usr/share/man/es/man1/catopy.1", mode = "644", doc = true },
	{ source = "man/catopy.1.fr", dest = "/usr/share/man/fr/man1/catopy.1", mode = "644", doc = true },
	{ source = "completions/catopy.bash", dest = "/usr/share/bash-completion/completions/catopy", mode = "644" },
	{ source = "completions/catopy.zsh", dest = "/usr/share/zsh/site-functions/_catopy", mode = "644" },
	{ source = "completions/catopy.fish", dest = "/usr/share/fish/vendor_completions.d/catopy.fish", mode = "644" },
	{ source = "README.md", dest = "/usr/share/doc/catopy/README.md", mode = "644", doc = true },
	{ source = "CHANGELOG.md", dest = "/usr/share/doc/catopy/CHANGELOG.md", mode = "644", doc = true },
	{ source = "LICENSE", dest = "/usr/share/licenses/catopy/LICENSE", mode = "644", doc = true },
]
